<resources>
    <string name="app_name">AudioMeter</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="audiometer">AudioMeter</string>
    <string name="audiometer_open">AudioMeter is open-source software. The sourcecode and license can be found at the following link:</string>
    <string name="am_link">https://github.com/quaap/AudioMeter</string>
    <string name="on_off">on/off</string>
    <string name="scale">Scale</string>
    <string name="method">Method:</string>
    <string name="show_controls">Show Controls</string>
    <string name="hide_controls">Hide Controls</string>
    <string name="name_link"><![CDATA[This program was written by <a href=\'http://quaap.com/D/programming-index?from=audiometer\'>Tom Kliethermes</a>]]></string>
    <string name="help1">dBFS: Decibels relative to full scale</string>
    <string name="help2">Max: Simply show the maximum PCM value.</string>
    <string name="help3">RMS: Root Mean Square of the samples.</string>
    <string name="help4">dBFS_RMS: RMS converted to dBFS.</string>
    <string name="help5">SqrtRMS: Squareroot of the RMS value.</string>
    <string name="help6">LogRMS: Natural log of the RMS value.</string>
    <string name="help7">Avg: Simple average of the samples.</string>
    <string name="help8">Scale: multiply the sample by the value of scale.</string>
    <string name="method_explanation">Method explanation:</string>
    <string name="help">Help</string>
    <string name="need_microphone">This application will not function without access to the microphone</string>
    <string name="got_microphone">Permission granted!</string>
    <string name="help_desc">AudioMeter uses your device\'s microphone to drive a simple VU-style meter. Given the limitations of most microphones on hand-held devices, it goes without saying that the levels measured will be inaccurate to some unknown degree, and should not be depended on for anything important.</string>
    <string name="help_priv">This program does not collect any information from you, and does not store any of the audio data used to display the meter.</string>
    <string name="advanced_options">Advanced options:</string>
</resources>
